6R2yEhGU wip - procs not found